[package]
name = "kook_onebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18",default-features = false,features = ["rustls-tls","multipart"]}
tokio = { version = "*", features = ["full"] }
serde_json = "*"
serde_derive = "*"
serde = {version = "*",features = ["derive"]}
tungstenite = "*"
tokio-tungstenite = { version ="*", features = ["native-tls"] }
futures-util = "*"
flate2 = "*"
hyper-tungstenite = "*"
hyper = { version = "*", features = ["full"] }
http-body-util = "0.1.0-rc.2"
lazy_static = "1.4.0"
uuid = {version = "1.3.0",features = ["v4","fast-rng"]}
scopeguard = "1.1.0"
regex = "1.8.4"
base64 = "0.21.0"
urlencoding = "2.1.2"
url = "2.4.0"
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter","time","local-time"]}
time = { version = "0.3", features = ["formatting", "macros"] }
