[package]
name = "kook_onebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18",default-features = false,features = ["rustls-tls","multipart"]}
tokio = {version = "1.29.1",features = ["macros","rt-multi-thread","fs"]}
serde_json = "1.0.100"
serde_derive = "1.0.166"
serde = {version = "1.0.166",features = ["derive"]}
tungstenite = { version ="0.19.0",default-features = false,features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version ="0.19.0",default-features = false,features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.28"
flate2 = "1.0.26"
hyper-tungstenite = "0.10.0"
hyper = {version = "0.14.27",features = ["server"]}
http-body-util = "0.1.0-rc.2"
lazy_static = "1.4.0"
uuid = {version = "1.3.0",features = ["v4","fast-rng"]}
scopeguard = "1.1.0"
regex = "1.8.4"
base64 = "0.21.0"
urlencoding = "2.1.2"
url = "2.4.0"
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter","time","local-time"]}
time = { version = "0.3", features = ["formatting", "macros"] }
hmac = "0.12.1"
sha1 = "0.10.5"
hex = "0.4.3"